# Calli

./: .gitignore  LICENSE  Makefile  bot.py  calli.py  pyproject.toml
config/: example.bot.toml
utils/: presence.py
