[project]
name = "calli"
version = "0.1.0"
description = "Discord bot for increasing server livelihood"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["discord>=2.3.2"]

[dependency-groups]
dev = ["mypy>=1.16.0", "ruff>=0.11.12"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",   # builtins
    "B",   # bugbear
    "C4",  # comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff
    "S",   # bandit
    "SIM", # simplify
    "TRY", # tryceratops
    "UP",  # pyupgrade
]
ignore = ["E501", "F401"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.13"
strict = true
